# kubehop

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  dist-workspace.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
benches/: startup.rs
completion/: kubectx.bash  kubectx.fish  kubectx.zsh  kubens.bash  kubens.fish  kubens.zsh
deploy/krew/: kubectx.yaml  kubens.yaml
examples/: plugins.yaml
src/: cli.rs  completion.rs  dispatch.rs  lib.rs  main.rs
src/context/: current.rs  error.rs  list.rs  mod.rs  mutate.rs  state.rs  switch.rs  yaml_helpers.rs
src/integration/: k9s.rs  mod.rs
src/kubeconfig/: error.rs  load.rs  mod.rs  model.rs
src/namespace/: current.rs  error.rs  list.rs  mod.rs  state.rs  switch.rs
src/picker/: fzf.rs  mod.rs  recency.rs  score.rs  tui.rs
tests/: argv0_dispatch.rs  kubeconfig_load.rs  kubectx_list.rs  kubectx_mutate.rs  kubectx_switch.rs  perf_startup.rs  picker_match.rs  recency.rs
tests/common/: mod.rs
tests/fixtures/: empty.yaml  multi_a.yaml  multi_b.yaml  no_current.yaml  simple.yaml
